# abbs

./: .gitignore  Cargo.toml  Config.example.toml  README.md  create_host_keys.sh
src/: bbs.rs  main.rs
src/db/: mod.rs
src/migrator/: m_20220127_000001_create_initial_tables.rs  mod.rs
src/ui/: labeled_edit_view.rs  mod.rs  stack.rs
src/ui/forum/: mod.rs
src/ui/home/: home_screen.rs
src/ui/profile/: mod.rs
src/user/: mod.rs
